added model.py as required by rubic

--- a/Build Model.ipynb
+++ b/Build Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "9  23.67355  driving_data_2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "7921"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "array(['driving_data_2', 'driving_data_1', 'driving_data_3'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "(160, 320, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "(7921, 160, 320, 3)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "(7921,)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,17 +391,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Flatten, Dense"
@@ -409,42 +401,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train on 6336 samples, validate on 1585 samples\n",
       "Epoch 1/10\n",
-      "7921/7921 [==============================] - 2s 273us/step - loss: 6330750.7567\n",
+      "6336/6336 [==============================] - 2s 314us/step - loss: 8032748.8340 - val_loss: 3967.8531\n",
       "Epoch 2/10\n",
-      "7921/7921 [==============================] - 2s 268us/step - loss: 3189.8016\n",
+      "6336/6336 [==============================] - 2s 310us/step - loss: 4053.8818 - val_loss: 2785.3772\n",
       "Epoch 3/10\n",
-      "7921/7921 [==============================] - 2s 266us/step - loss: 2260.3092\n",
+      "6336/6336 [==============================] - 2s 312us/step - loss: 3034.5205 - val_loss: 1446.7063\n",
       "Epoch 4/10\n",
-      "7921/7921 [==============================] - 2s 269us/step - loss: 3153.2086\n",
+      "6336/6336 [==============================] - 2s 310us/step - loss: 2922.3319 - val_loss: 2357.3385\n",
       "Epoch 5/10\n",
-      "7921/7921 [==============================] - 2s 267us/step - loss: 2191.0430\n",
+      "6336/6336 [==============================] - 2s 311us/step - loss: 2493.4174 - val_loss: 3453.5532\n",
       "Epoch 6/10\n",
-      "7921/7921 [==============================] - 2s 268us/step - loss: 2950.0167\n",
+      "6336/6336 [==============================] - 2s 309us/step - loss: 3728.5733 - val_loss: 3806.1823\n",
       "Epoch 7/10\n",
-      "7921/7921 [==============================] - 2s 264us/step - loss: 4504.1209\n",
+      "6336/6336 [==============================] - 2s 314us/step - loss: 1947.6531 - val_loss: 6452.4513\n",
       "Epoch 8/10\n",
-      "7921/7921 [==============================] - 2s 267us/step - loss: 24501.2849\n",
+      "6336/6336 [==============================] - 2s 309us/step - loss: 4798.5708 - val_loss: 867.7255\n",
       "Epoch 9/10\n",
-      "7921/7921 [==============================] - 2s 267us/step - loss: 1336917.8388\n",
+      "6336/6336 [==============================] - 2s 314us/step - loss: 9889.3634 - val_loss: 26908.5401\n",
       "Epoch 10/10\n",
-      "7921/7921 [==============================] - 2s 263us/step - loss: 90715.8200\n"
+      "6336/6336 [==============================] - 2s 310us/step - loss: 19102.2336 - val_loss: 3561.1592\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f5ce35a1860>"
+       "<keras.callbacks.History at 0x7f5ce0e7f400>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,15 +448,118 @@
     "model.add(Dense(1))\n",
     "\n",
     "model.compile(loss='mse', optimizer='adam')\n",
-    "model.fit(x_train, y_train)"
+    "model.fit(x_train, y_train, validation_split=0.2, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('model.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Lambda, Convolution2D, Cropping2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:4: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(24, (5, 5), strides=(2, 2), activation=\"relu\")`\n",
+      "  after removing the cwd from sys.path.\n",
+      "/root/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:5: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(36, (5, 5), strides=(2, 2), activation=\"relu\")`\n",
+      "  \"\"\"\n",
+      "/root/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:6: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(48, (5, 5), strides=(2, 2), activation=\"relu\")`\n",
+      "  \n",
+      "/root/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:7: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
+      "  import sys\n",
+      "/root/miniconda3/envs/carnd-term1/lib/python3.5/site-packages/ipykernel_launcher.py:8: UserWarning: Update your `Conv2D` call to the Keras 2 API: `Conv2D(64, (3, 3), activation=\"relu\")`\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "adv_model = Sequential()\n",
+    "adv_model.add(Lambda(lambda x: x/255.0 - 0.5, input_shape=(160,320,3)))\n",
+    "adv_model.add(Cropping2D(cropping=((70,25),(0,0))))\n",
+    "adv_model.add(Convolution2D(24,5,5,subsample=(2,2),activation=\"relu\"))\n",
+    "adv_model.add(Convolution2D(36,5,5,subsample=(2,2),activation=\"relu\"))\n",
+    "adv_model.add(Convolution2D(48,5,5,subsample=(2,2),activation=\"relu\"))\n",
+    "adv_model.add(Convolution2D(64,3,3,activation=\"relu\"))\n",
+    "adv_model.add(Convolution2D(64,3,3,activation=\"relu\"))\n",
+    "adv_model.add(Flatten())\n",
+    "adv_model.add(Dense(100))\n",
+    "adv_model.add(Dense(50))\n",
+    "adv_model.add(Dense(10))\n",
+    "adv_model.add(Dense(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6336 samples, validate on 1585 samples\n",
+      "Epoch 1/5\n",
+      "6336/6336 [==============================] - 35s 6ms/step - loss: 0.0339 - val_loss: 0.1708\n",
+      "Epoch 2/5\n",
+      "6336/6336 [==============================] - 35s 6ms/step - loss: 0.0292 - val_loss: 0.1808\n",
+      "Epoch 3/5\n",
+      "6336/6336 [==============================] - 36s 6ms/step - loss: 0.0267 - val_loss: 0.1745\n",
+      "Epoch 4/5\n",
+      "6336/6336 [==============================] - 36s 6ms/step - loss: 0.0247 - val_loss: 0.1685\n",
+      "Epoch 5/5\n",
+      "6336/6336 [==============================] - 36s 6ms/step - loss: 0.0208 - val_loss: 0.1799\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb287a7bef0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adv_model.compile(loss='mse', optimizer='adam')\n",
+    "adv_model.fit(x_train, y_train, epochs=5, validation_split=0.2, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adv_model.save('adv_model.h5')"
+   ]
   }
  ],
  "metadata": {
